# localstack-extension-pycharm-debug

./: README.md  setup.cfg
localstack_pycharm_debug/: extension.py
