[metadata]
name = localstack-extension-pycharm-debug
version = 0.1.0.dev0
url = https://github.com/thrau/localstack-extension-pycharm-debug
author = Thomas Rausch
author_email = thomas@localstack.cloud
description = Launch LocalStack and connect it to a running PyCharm Debug server
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8

[options]
zip_safe = False
packages = find:
install_requires =
    localstack>=1.0
    pydevd-pycharm

[options.entry_points]
localstack.extensions =
    localstack-extension-pycharm-debug = localstack_pycharm_debug.extension:PycharmDebugExtension
